# SQLRobustBench

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: benchmark_v1.yaml  release_2500.yaml
configs/dialects/: ansi_like.yaml  postgres_like.yaml
configs/schemas/: hr_payroll.yaml  logistics.yaml  retail_sales.yaml
docs/: ambiguity_policy.md  canonicalization_policy.md  corruption_taxonomy.md  dataset_card_draft.md  hf_dataset_README.md  split_policy.md
metadata/: corruption_taxonomy.json  dialect_profiles.json  normalization_rules.json
scripts/: bootstrap_env.sh  build_splits.py  export_hf.py  generate_clean_queries.py  generate_corrupt_examples.py  generate_normalize_examples.py  generate_schemas.py  prepare_hf_dataset_repo.py  validate_dataset.py
src/sqlrobustbench/: __init__.py  hashing.py  ids.py  types.py
src/sqlrobustbench/corrupt/: __init__.py  operators.py  recipes.py
src/sqlrobustbench/dedup/: __init__.py  hashes.py  leakage.py
src/sqlrobustbench/export/: __init__.py  corpus.py  hf_packaging.py  parquet_writer.py  rows.py
src/sqlrobustbench/normalize/: __init__.py  canonicalize.py  rules.py
src/sqlrobustbench/queries/: __init__.py  ast.py  complexity.py  generator.py  renderer.py
src/sqlrobustbench/schemas/: __init__.py  families.py  generator.py
tests/: test_corpus_generation.py  test_corruption_generation.py  test_dedup.py  test_export_pipeline.py  test_hashing.py  test_ids.py  test_normalization.py  test_query_generator.py  test_schema_generator.py  test_splits.py  test_validation.py
(+8 files in other folders)
