[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlrobustbench"
version = "0.1.0"
description = "Scaffold and benchmark tooling for SQLCorrupt and SQLNormalize"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "pyyaml>=6.0.1,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.3,<0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
